targeted specific elements to remove padding and align them with the rest of the data on the page

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,11 @@ body {
 	margin: 0 auto!important;
 }
 
+#weather-icon, .description {
+  padding: 0;
+}
+
+
 /* 5 day forecast */
 #weather-forecast{
 	display: none;
